# anime-watcher

./: .editorconfig  .gitignore  Caddyfile  mprocs.yaml
.docker/backend/: Dockerfile
.docker/frontend/: Dockerfile
backend/: .gitignore  Cargo.toml
backend/crates/entity/: Cargo.toml
backend/crates/entity/src/: lib.rs
backend/crates/entity/src/entities/: mod.rs  prelude.rs  series.rs  series_sources.rs
backend/crates/migration/: Cargo.toml
backend/crates/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20231011_082054_add_mal_id_to_series.rs
backend/crates/remote_graphql_queries/: Cargo.toml  build.rs
backend/crates/remote_graphql_queries/schemas/: allanime.graphql
backend/crates/remote_graphql_queries/src/: lib.rs
backend/crates/remote_graphql_queries/src/allanime/: mod.rs  show_info.rs
backend/crates/remote_graphql_queries/src/allanime/common_/: airing_status.rs  date_time_field.rs  field_or_empty.rs  mod.rs  translation_type.rs
backend/src/: main.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/logger/: mod.rs
backend/src/metadata/: common.rs  mod.rs
backend/src/metadata/allanime/: anime.rs  mod.rs
backend/src/metadata/allanime/query/: client.rs  mod.rs
backend/src/metadata/allanime/query/models/: mod.rs
backend/src/metadata/allanime/query/models/common/: date_field.rs  mod.rs  page_status.rs  video_info.rs
backend/src/metadata/allanime/query/models/episode/: info.rs  mod.rs
backend/src/metadata/allanime/query/models/show/: episodes.rs  info.rs  mod.rs
backend/src/metadata/aniwatch/: anime.rs  episode.rs  mod.rs  request.rs
backend/src/metadata/aniwave/: anime.rs  mod.rs  request.rs
backend/src/metadata/myanimelist/: mod.rs  request.rs
backend/src/metadata/myanimelist/anime/: details.rs
backend/src/server/: mod.rs  server_timing.rs  state.rs
backend/src/server/router/: mod.rs
backend/src/server/router/response/: error.rs  mod.rs
backend/src/server/router/routes/v1/: mod.rs
backend/src/server/router/routes/v1/handlers/: mod.rs
backend/src/server/router/routes/v1/handlers/anime/: mod.rs
backend/src/server/router/routes/v1/handlers/anime/info/: mod.rs
backend/src/server/router/routes/v1/handlers/anime/sources/: mod.rs
backend/src/server/router/routes/v1/handlers/index/: mod.rs
backend/src/server/router/routes/v1/response/: mod.rs
backend/src/server/routes/: mod.rs
backend/src/server/routes/index/: mod.rs
frontend/: .env.example  .eslintrc.cjs  components.json  next.config.mjs  package.json  tailwind.config.ts
frontend/src/: env.mjs
frontend/src/api/: fetch.ts
frontend/src/api/types/: base.ts
frontend/src/api/v1/: $fetch.ts  $models.ts  anime.ts  index.ts  (+1 more)
frontend/src/app/: layout.tsx  providers.tsx
frontend/src/pages/: _app.tsx
frontend/src/types/: app-router.ts
frontend/src/util/: metadata.ts
(+6 files in other folders)
