[package]
name = "anime-watcher-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "crates/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.18", features = ["macros", "headers"] }
axum-extra = { version = "0.8.0", features = ["erased-json"] }
axum-macros = "0.3.8"
chrono = { version = "0.4.24", features = ["alloc", "serde"] }
clap = { version = "4.3.8", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
duration-str = "0.7.0"
futures = "0.3.28"
lazy_static = "1.4.0"
log = "0.4.17"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.16", default-features = false, features = [
  "json",
  "deflate",
  "gzip",
  "rustls-tls",
] }
scraper = "0.16.0"
sea-orm = { version = "0.12.3", features = ["macros", "runtime-tokio-rustls", "debug-print", "sqlx-all", "sea-orm-internal"] }
serde = { version = "1.0.160", features = ["derive", "alloc"] }
serde_json = { version = "1.0.96", features = ["alloc", "preserve_order"] }
serde_with = { version = "3.3.0", features = ["json", "chrono", "base64"] }
struct-field-names-as-array = "0.1.4"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.4.1", features = ["full"] }
url = { version = "2.4.1", features = ["serde"] }
urlencoding = "2.1.3"
entity = { path = "crates/entity" }
migration = { path = "crates/migration" }
remote_graphql_queries = { path = "crates/remote_graphql_queries" }

[profile.release]
lto = "thin"
