[package]
name = "remote_graphql_queries"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "remote_graphql_queries"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["alloc", "serde", "rkyv"] }
cynic = { version = "3.2.2", features = ["serde_json", "rkyv"] }
log = "0.4.17"
reqwest = { version = "0.11.22", features = ["json", "deflate", "gzip", "rustls"] }
serde = { version = "1.0.189", features = ["derive", "alloc"] }
serde_json = { version = "1.0.107", features = ["alloc", "preserve_order", "arbitrary_precision"] }

[build-dependencies]
cynic-codegen = { version = "3" }
